--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
-# APPLE_SOURCE67.github.io
-s
+<html>
+<head>
+<title>Creative Art Portfolio</title>
+<link rel="stylesheet" href="main.css">
+</head>
+<body>
+<h1>Creative Art Portfolio</h1>
+
+<nav>
+    <a href="page2.html">View Images Of Art</a>
+    <a href="page3.html">About Me</a>
+</nav>
+
+<h2>Examples of one of our users uploaded art.</h2>
+<img src="loookiee.jpg">
+
+</body>
+</html>
+
+
